--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,8 @@ jobs:
         run: |
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
-          git add -A
+          git status -s
+          git add .
           git commit -m "✅ add a BingImage" -a
       - name: 'Push changes'
         uses: ad-m/github-push-action@master
