--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,7 @@ on:
     - cron: 0 0 * * *
 jobs:
   Get-IPs:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     steps:
       - name: 'Set up Go'
         uses: actions/setup-go@v1
@@ -18,31 +18,40 @@ jobs:
           go-version: 1.16.6
       
       - name: Checkout Out Code
-        uses: actions/checkout@v2
+        uses: actions/checkout@main
 
       - name: 'Install dependencies'
         run: go mod tidy
         
-      - name: Delete old files
-        run: |
-          rm -rf ipranges
-          git config --local user.email "action@github.com"
-          git config --local user.name "GitHub Action"
-          git add -A
-          git commit -m "Delete old IPRanges files" -a
-          
       - name: 'Working'
         timeout-minutes: 500
         run: |
           go run main.go -w
 
-      - name: Commit files
-        run: |
-          git config --local user.email "action@github.com"
-          git config --local user.name "GitHub Action"
-          git add -A
-          git commit -m "✅ add a IPRanges" -a
-      - name: 'Push changes'
-        uses: ad-m/github-push-action@master
+      - name: Check space usage
+        if: (!cancelled())
+        run: df -hT
+      
+      - name: Upload firmware directory
+        uses: actions/upload-artifact@main
+        if: steps.organize.outputs.status == 'success' && !cancelled()
         with:
-          github_token: ${{ secrets.TOKEN }}
+          name: IPRanges
+          path: ipranges/
+
+      - name: Generate release tag
+        id: tag
+        if: (!cancelled())
+        run: |
+          echo "::set-output name=release_tag::$(date "+%Y.%m.%d")"
+          echo "::set-output name=status::success"
+
+      - name: Upload firmware to release
+        uses: softprops/action-gh-release@v1
+        if: (!cancelled())
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: ${{ steps.tag.outputs.release_tag }}
+          body_path: release.txt
+          files: ipranges/
