--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -54,4 +54,4 @@ jobs:
         with:
           tag_name: ${{ steps.tag.outputs.release_tag }}
           body_path: release.txt
-          files: ipranges/
+          files: ipranges/*
