--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -54,3 +54,4 @@ jobs:
         with:
           tag_name: ${{ steps.tag.outputs.release_tag }}
           files: ipranges/*
+          path: ipranges/*
