--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,6 +44,7 @@ jobs:
         if: (!cancelled())
         run: |
           echo "::set-output name=release_tag::$(date "+%Y.%m.%d")"
+          echo "IPRanges" > release.txt
           echo "::set-output name=status::success"
 
       - name: Upload firmware to release
@@ -53,4 +54,5 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           tag_name: ${{ steps.tag.outputs.release_tag }}
+          body_path: release.txt
           files: ipranges/*
